--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -120,6 +120,16 @@ layout: default
                                 </a>
                             </li>
                             {% endif %}
+                            {% if site.swifthumb_username %}
+                            <li>
+                                <a target="_blank" href="http://www.swifthumb.com/home.php?mod=space&uid={{ site.swifthumb_username }}&do=index">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fa fa-circle fa-stack-2x"></i>
+                                        <i class="fa  fa-stack-1x fa-inverse">敏</i>
+                                    </span>
+                                </a>
+                            </li>
+                            {% endif %}
                             {% if site.jianshu_username %}
                             <li>
                                 <a target="_blank" href="http://www.jianshu.com/u/{{ site.jianshu_username }}">
