--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,7 +59,7 @@ layout: default
             </div>
 
             <!-- Side Catalog Container -->
-            <div class="
+            <!-- <div class="
                 col-lg-2 col-lg-offset-0
                 visible-lg-block
                 sidebar-container
@@ -71,7 +71,7 @@ layout: default
                     </h5>
                     <ul class="catalog-body"></ul>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </article>
